<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="com.example.mohanbabu.samplemarvelapp.CharacterDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<RelativeLayout-->
                <!--android:id="@+id/banner_container"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp">-->

                <!--<com.android.volley.toolbox.NetworkImageView-->
                    <!--android:id="@+id/detail_character_banner"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="200dp"-->
                    <!--android:scaleType="centerCrop" />-->

                <!--<TextView-->
                    <!--android:id="@+id/title"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_marginLeft="@dimen/layout_margin_left"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:textSize="25dp" />-->

            <!--</RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/banner_container"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/character_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/subitem_margin_top"
                    android:singleLine="false"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:text="@string/comics"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comics_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/comics_list_item_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/subitem_margin_top"
                    android:background="@drawable/background"></android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:text="@string/series"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/series_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/comics_list_item_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/subitem_margin_top"
                    android:background="@drawable/background"></android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:text="@string/stories"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/stories_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/comics_list_item_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/subitem_margin_top"
                    android:background="@drawable/background"></android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:text="@string/events"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/events_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/comics_list_item_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/subitem_margin_top"
                    android:background="@drawable/background"></android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
